# SDL_tutotrial

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake  FindSDL2IMAGE.cmake
